<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainScrollView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TableLayout
        android:id="@+id/TableLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:shrinkColumns="*"
        tools:context=".MainActivity" >

        <Button
            android:id="@+id/openUartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/open_uart" />

        <TextView
            android:id="@+id/portNumLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/port_number" />

        <Spinner
            android:id="@+id/portNumSpn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/configUartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/configure_uart" />

        <TextView
            android:id="@+id/baudRateLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/baud_rate_" />

        <Spinner
            android:id="@+id/baudRateSpn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/stopBitsLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:focusable="false"
            android:text="@string/stop_bits" />

        <Spinner
            android:id="@+id/stopBitsSpn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/dataBitsLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:focusable="false"
            android:text="@string/data_bits" />

        <Spinner
            android:id="@+id/dataBitsSpn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/parityLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:focusable="false"
            android:text="@string/parity" />

        <Spinner
            android:id="@+id/paritySpn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/flowControlLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:focusable="false"
            android:text="@string/flow_control" />

        <Spinner
            android:id="@+id/flowControlSpn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/inDataLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#63B8FF"
            android:focusable="false"
            android:text="@string/incoming_data"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/enDownBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/disable_data_download" />

        <Button
            android:id="@+id/openBtBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/open_bluetooth" />

        <TextView
            android:id="@+id/outDataLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#70DB93"
            android:focusable="false"
            android:text="@string/outgoing_data"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/enUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/disable_data_upload" />

        <TextView
            android:id="@+id/bufDataLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#FFA54F"
            android:focusable="false"
            android:text="@string/buffer_status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableLayout>

</ScrollView>
